Update build configs