@@ -17,6 +17,11 @@ dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
 }
 
+tasks.withType<JavaCompile> {
+    options.release.set(18)
+    options.compilerArgs.add("--add-modules=jdk.incubator.foreign")
+}
+
 tasks.getByName<Test>("test") {
     useJUnitPlatform()
 }
